# ofx-bot

./: .gitignore  .gitmodules  README-ptbr.md  README.md  ofx-bb.py  ofx-caixa.py  ofx-cmu.py  ofx-santander.py
bb/: .gitignore  BB.cabal  LICENSE  Main.hs  build.sh
itau/: .gitignore  ItauOFX.cabal  Main.hs  build.sh  stack.yaml
nubank/: .gitignore  Main.hs  NuBank.cabal  build.sh  stack.yaml
