name:                ItauOFX
version:             0.1.0.0
synopsis:            Bot para facilitar a conciliação bancária de contas do Itaú com aplicativos que aceitam o formato OFX
license:             BSD3
license-file:        LICENSE
author:              Emilio Francesquini
maintainer:          francesquini@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable ofx-itau
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       bytestring >= 0.10,
                       containers >= 0.5,
                       directory >= 1.2,
                       executable-path >= 0.0.2,
                       HTTP >= 4000.2,
                       network >= 2.4,
                       network-uri >= 2.5,
                       process >= 1.2,
                       text >= 1.1,
                       time >= 1.4,
                       transformers >= 0.3,
                       webdriver >= 0.6
  ghc-options:         -O3 -Wall
  default-language:    Haskell2010
