name:                ItauOFX
version:             0.1.0.0
synopsis:            Bot para facilitar a conciliação bancária de contas do Itaú com aplicativos que aceitam o formato OFX
license:             BSD3
license-file:        LICENSE
author:              Emilio Francesquini
maintainer:          francesquini@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable ofx-itau
  main-is:             Main.hs
  build-depends:       base >=4.7,
                       itau-lib >=0.2.0.1,
                       webdriver >= 0.6,
                       transformers >= 0.3,
                       directory >= 1.2
  ghc-options:         -O3 -Wall
  default-language:    Haskell2010
