name:                NuBank
version:             0.0.0.1
synopsis:            Bot para facilitar a conciliação bancária de cartões NuBank com aplicativos
license:             BSD3
license-file:        LICENSE
author:              Emilio Francesquini
maintainer:          francesquini@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable ofx-nubank
  main-is:              Main.hs
  build-depends:        base >=4.8 && <4.9,
                        bytestring >=0.10,
                        directory >=1.2,
                        executable-path >=0.0.2,
                        filepath >= 1.4,
                        HTTP >=4000.2,
                        network-uri >=2.5,
                        process >=1.2,
                        text >=1.1,
                        time >=1.4,
                        transformers >=0.3,
                        tuple >= 0.3, 
                        webdriver >= 0.6,
                        regex-compat >=0.95

  ghc-options:         -O3 -Wall
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings